kubernetes/service.yaml
apiVersion: v1
kind: Service

metadata:
  name: devops-nbd-service
  namespace: devops-nbd

spec:
  selector:
    app: devops-nbd

  ports:
    - protocol: TCP
      port: 80
      targetPort: 80

  type: ClusterIP
