kubernetes/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress

metadata:
  name: devops-nbd-ingress
  namespace: devops-nbd

spec:
  ingressClassName: nginx

  rules:
  - host: devops-nbd.local

    http:
      paths:

      - path: /
        pathType: Prefix

        backend:
          service:
            name: devops-nbd-service

            port:
              number: 80
